[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Trif <5209060+Trif4@users.noreply.github.com>", "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
nom = "7.1.3"
pico-args = "0.5.0"
regex = "1.10.2"
